# blast-rs

./: .gitignore  Cargo.toml  NCBI_FUNCTION_MAP.md  README.md  ccc-mapping.toml  test_blast_c.c  test_blast_search.c  test_blast_search2.c
.github/workflows/: ci.yml
benches/: gapped_dp.rs
blast-cli/: Cargo.toml
blast-cli/src/: main.rs
blast-cli/tests/: compare.rs
blast-core/: Cargo.toml
blast-core-sys/: Cargo.toml  build.rs
blast-core-sys/stubs/: mt_lock_stub.c  ncbiconf.h  wrapper.h
blast-core-sys/stubs/corelib/: ncbitype.h
blast-core-sys/stubs/util/tables/: tables_export.h
blast-core/src/: blastn.rs  encoding.rs  engine.rs  filter.rs  gapinfo.rs  hits.rs  itree.rs  lib.rs  listnode.rs  math.rs  matrix.rs  options.rs  parameters.rs  program.rs  pssm.rs  queryinfo.rs  rps.rs  search.rs  seqsrc.rs  sequence.rs  stat.rs  traceback.rs  util.rs
blast-db/: Cargo.toml
blast-db/src/: index.rs  lib.rs  makedb.rs  seqsrc.rs
blast-format/: Cargo.toml
blast-format/src/: lib.rs  sam.rs  tabular.rs  xml.rs
blast-input/: Cargo.toml
blast-input/src/: encoding.rs  fasta.rs  lib.rs
src/: api.rs  blast_kappa.rs  blast_setup.rs  blastn.rs  compo_mode_condition.rs  composition.rs  diagnostics.rs  encoding.rs  engine.rs  extend.rs  filter.rs  gapalign.rs  gapinfo.rs  greedy.rs  hits.rs  hspfilter_culling.rs  hspstream.rs  itree.rs  lib.rs  link_hsps.rs  lookup.rs  main.rs  math.rs  matrix.rs  nlm_linear_algebra.rs  optimize_target_freq.rs  options.rs  parameters.rs  program.rs  protein.rs  protein_lookup.rs  pssm.rs  queryinfo.rs  rps.rs  search.rs  semi_gapped_align.rs  seqsrc.rs  sequence.rs  smith_waterman.rs  stat.rs  (+2 more)
src/db/: alias.rs  index.rs  makedb.rs  mod.rs
src/format/: mod.rs  pairwise.rs  sam.rs  tabular.rs  xml.rs
src/input/: encoding.rs  fasta.rs  mod.rs
tests/: download_test_db.sh  integration.rs  run_protein_cli_parity.sh  stress_blastn_short.rs
tests/fixtures/: blank_lines.fa  blastx_nuc_query.fa  blastx_prot_subject.fa  lowercase_query.fa  multi_query.fa  poly_a.fa  protein_query.fa  protein_subject.fa  psi_query.fa  psi_subject.fa  query_5x200.fa  query_long_match.fa  query_medium_match.fa  query_random_200.fa  query_random_30.fa  query_short_match.fa  query_with_ns.fa  repetitive_query.fa  single_base.fa  subject_test.fa  tblastn_nuc_subject.fa  tblastn_prot_query.fa  tblastx_nuc_query.fa  tblastx_nuc_subject.fa  test_query.fa  test_query_random.fa
tests/fixtures/corrupt_db/: badversion.nin  empty.nin
tests/fixtures/large_db/: .gitignore  download.sh  query_2000.fa  query_500.fa
tools/: reduce_gaps_probe.c  spouge_probe.c  spouge_probe_standalone.c
tools/align_ex_parity/: README.md  ncbi_align_ex  ncbi_align_ex.c
