[package]
name = "blast-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Unlicense"
description = "Pure-Rust implementation of NCBI BLAST (Basic Local Alignment Search Tool)"
repository = "https://github.com/henriksson-lab/blast-rs"
homepage = "https://github.com/henriksson-lab/blast-rs"
readme = "README.md"
keywords = ["bioinformatics", "blast", "alignment", "sequence", "genomics"]
categories = ["science", "command-line-utilities"]
exclude = [
    "ncbi-blast-2.17.0+-src/",
    "tests/fixtures/large_db/",
    "CLAUDE.md",
    ".claude/",
]

[[bin]]
name = "blast-cli"
path = "src/main.rs"

[lib]
name = "blast_rs"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
noodles-fasta = "0.47"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
