[package]
name = "blast-rs"
version = "0.11.0"
edition = "2021"
license = "MIT OR Unlicense"
description = "Pure-Rust implementation of NCBI BLAST (Basic Local Alignment Search Tool)"
repository = "https://github.com/henriksson-lab/blast-rs"
homepage = "https://github.com/henriksson-lab/blast-rs"
readme = "README.md"
keywords = ["bioinformatics", "blast", "alignment", "sequence", "genomics"]
categories = ["science", "command-line-utilities"]
include = [
    "src/**/*",
    "tests/**/*",
    "benches/**/*",
    "!tests/fixtures/large_db/**",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.md",
    "README.md",
]

[[bin]]
name = "blast-cli"
path = "src/main.rs"

[lib]
name = "blast_rs"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
noodles-fasta = "0.47"
rayon = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.clippy]
# BLAST C functions take many parameters (e.g. ALIGN_EX takes 14). Rust
# ports mirror the C signatures so they can be compared line-by-line
# against the NCBI source — don't "fix" by bundling args into structs.
too_many_arguments = "allow"
# NCBI uses C-style `for (i = 0; i < n; i++) arr[i] = ...` throughout.
# Rust ports keep those loops indexed for line-by-line parity; converting
# to `.iter_mut().enumerate()` would diverge from the C reference.
needless_range_loop = "allow"


[[bench]]
name = "gapped_dp"
harness = false

[dev-dependencies]
tempfile = "3.27.0"
tracehash-rs = "0.1"
